# DeadlineTracker

./: Cargo.toml  DEBUG_NOTES.md  Dioxus.toml  README.md  deadlines.json  tailwind.config.js
.github/workflows/: release.yml
assets/styling/: main.css
src/: main.rs
src/model/: datetime.rs  deadline.rs  mod.rs
src/persistence/: json.rs  memory.rs  mod.rs  repo.rs  sqlite.rs  types.rs
src/views/: blog.rs  calendar_view.rs  deadline_item_view.rs  deadline_list_view.rs  edit_deadline_view.rs  home.rs  mod.rs  navbar.rs
