[package]
name = "deadline-tracker"
version = "0.1.0"
authors = ["Yang-Yiming <44901560@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
dioxus = { version = "0.6.0", features = ["router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ulid = "1.1"
anyhow = "1.0"

[features]
default = ["desktop"]
# Platform-specific front-ends must be explicitly enabled so we do not pull incompatible targets.
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[package.metadata.bundle]
name = "Deadline Tracker"
identifier = "com.yangyiming.deadlinetracker"
icon = []
resources = ["deadlines.json"]
category = "Productivity"
short-description = "Simple cross-platform deadline tracker"
long-description = "Deadline Tracker is a Dioxus-based desktop client for keeping up with your commitments across platforms."
